--- a/filme.html
+++ b/filme.html
@@ -6,10 +6,31 @@
 		<title> Título da sua página </title>
   </head>
   <body>
+    <div>
+      <a href="index.html"><img src="images/logo.png"/></a>
+      <p><strong>Menu</strong></p>
+      <ul>
+        <li><a href="index.html">Página inicial</a></li>
+        <li><a href="filme.html">Filme</a></li>
+        <li><a href="livro.html">Livro</a></li>
+        <li><a href="musica.html">Música</a></li>
+      </ul>
+    </div>
     <img src="images/filme.jpg"/>
     <h1>Tempos Modernos</h1>
     <p>Tempos Modernos é um <em>filme</em> que retrata a vida urbana nos <em>Estados Unidos</em> no ano de 1930, demonstrando os modos de produção industrial baseados na divisão e especialização do trabalho na linha de montagem.</p>
     <strong>Comédia, drama, romance</strong>
+    <br/>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/GLeDdzGUTq0?si=XoHpA9j9h9pc-99n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <ul>
+      <li><a href="https://globoplay.globo.com/tempos-modernos/t/N7PqTXSLQt">Telecine</a></li>
+      <li><a href="https://www.primevideo.com/dp/amzn1.dv.gti.c4faf009-32c5-4976-8c51-90ca4af9821e?autoplay=0&ref_=atv_cf_strg_wb">Amazon prime vídeo</a></li>
+    </ul>
+    <div>
+      <p>mchariel@gmail.com</p>
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiRre3q2r2IAxVEKrkGHXqbFakQFnoECBsQAQ&url=https%3A%2F%2Fwww.instagram.com%2Fmchariel%2F%3Fhl%3Den&usg=AOvVaw2TjdDOuNY_qW-5NAfLMnQ_&opi=89978449"><img src="images/instagram.png"></a>
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiz3Jjw2r2IAxWDF7kGHXyWGWoQFnoECBoQAQ&url=https%3A%2F%2Fwww.facebook.com%2Fharieloriginal%2F%3Flocale%3Dpt_BR&usg=AOvVaw1k4ZXe1y77SyipYq9126sE&opi=89978449"><img src="images/facebook.png"></a>
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiFp4eL272IAxVIq5UCHSSwCnIQFnoECBgQAQ&url=https%3A%2F%2Fwww.youtube.com%2Fchannel%2FUCU06XOgERkQV7xCsrNLTf4Q&usg=AOvVaw27Mn1xb-6tIE032vq367NQ&opi=89978449"><img src="images/youtube.png"></a>
+    </div>
   </body>
 </html>
