--- a/index.html
+++ b/index.html
@@ -6,5 +6,27 @@
 		<title> Título da sua página </title>
   </head>
   <body>
+    <div>
+      <a href="index.html"><img src="images/logo.png"/></a>
+      <p><strong>Menu</strong></p>
+      <ul>
+        <li><a href="index.html">Página inicial</a></li>
+        <li><a href="filme.html">Filme</a></li>
+        <li><a href="livro.html">Livro</a></li>
+        <li><a href="musica.html">Música</a></li>
+      </ul>
+    </div>
+    <img src="images/artista.jpg"/>
+    <h1>Hariel Denaro Ribeiro</h1>
+    <p>Hariel Denaro Ribeiro (São Paulo, 20 de dezembro de 1997), mais conhecido pelo nome artístico MC Hariel, é um cantor e compositor de funk paulista.</p>
+    <a href="filme.html"><img src="images/filme.jpg"/></a>
+    <a href="livro.html"><img src="images/livro.jpg"/></a>
+    <a href="musica.html"><img src="images/musica.jpg"/></a>
+    <div>
+      <p>mchariel@gmail.com</p>
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiRre3q2r2IAxVEKrkGHXqbFakQFnoECBsQAQ&url=https%3A%2F%2Fwww.instagram.com%2Fmchariel%2F%3Fhl%3Den&usg=AOvVaw2TjdDOuNY_qW-5NAfLMnQ_&opi=89978449"><img src="images/instagram.png"></a>
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiz3Jjw2r2IAxWDF7kGHXyWGWoQFnoECBoQAQ&url=https%3A%2F%2Fwww.facebook.com%2Fharieloriginal%2F%3Flocale%3Dpt_BR&usg=AOvVaw1k4ZXe1y77SyipYq9126sE&opi=89978449"><img src="images/facebook.png"></a>
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiFp4eL272IAxVIq5UCHSSwCnIQFnoECBgQAQ&url=https%3A%2F%2Fwww.youtube.com%2Fchannel%2FUCU06XOgERkQV7xCsrNLTf4Q&usg=AOvVaw27Mn1xb-6tIE032vq367NQ&opi=89978449"><img src="images/youtube.png"></a>
+    </div>
   </body>
 </html>
