--- a/livro.html
+++ b/livro.html
@@ -6,5 +6,46 @@
 		<title> Título da sua página </title>
   </head>
   <body>
+    <div>
+      <a href="index.html"><img src="images/logo.png"/></a>
+      <p><strong>Menu</strong></p>
+      <ul>
+        <li><a href="index.html">Página inicial</a></li>
+        <li><a href="filme.html">Filme</a></li>
+        <li><a href="livro.html">Livro</a></li>
+        <li><a href="musica.html">Música</a></li>
+      </ul>
+    </div>
+    <img src="images/livro.jpg"/>
+    <h1>Harry Potter e a Pedra FIlosofal</h1>
+    <p><em>Harry Potter e a Pedra Filosofal</em> é o primeiro dos sete livros da série de fantasia Harry Potter, escrita por <em>MC Hariel</em>. O livro conta a história de <em>Harry Potter</em>, um órfão criado pelos tios que descobre, em seu décimo primeiro aniversário, que é um bruxo. No romance, são narrados seus primeiros passos na comunidade bruxa, sua entrada na <em>Escola de Magia e Bruxaria de Hogwarts</em> o início de sua amizade com Ron Weasley e Hermione Granger, os quais o ajudam a enfrentar <em>Lord Voldemort — Lorde das Trevas</em> e assassino dos pais de Harry, que agora procura um objeto lendário conhecido como a pedra filosofal.
+    </p>
+    <strong>Fantasia e ficção</strong>
+    <br/>
+    <h1>Índice</h1>
+    <ol>
+      <li>O menino que sobreviveu</li>
+        <ol>
+          <li>O Harry potter</li>
+        </ol>
+      <li>O vidro que sumiu</li>
+      <li>A carta de ninguém</li>
+        <ol>
+          <li>Assinado por</li>
+        </ol>
+      <li>O guardião das chaves</li>
+      <li>O beco diagonal</li>
+        <ol>
+          <li>hipotenusa</li>
+        </ol>
+    </ol>
+    <h1>R$39,64</h1>
+    <a href="https://www.amazon.com.br/Harry-Potter-Pedra-Filosofal-Rowling/dp/8532530788">Compre Agora</a>
+    <div>
+      <p>mchariel@gmail.com</p>
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiRre3q2r2IAxVEKrkGHXqbFakQFnoECBsQAQ&url=https%3A%2F%2Fwww.instagram.com%2Fmchariel%2F%3Fhl%3Den&usg=AOvVaw2TjdDOuNY_qW-5NAfLMnQ_&opi=89978449"><img src="images/instagram.png"></a>
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiz3Jjw2r2IAxWDF7kGHXyWGWoQFnoECBoQAQ&url=https%3A%2F%2Fwww.facebook.com%2Fharieloriginal%2F%3Flocale%3Dpt_BR&usg=AOvVaw1k4ZXe1y77SyipYq9126sE&opi=89978449"><img src="images/facebook.png"></a>
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiFp4eL272IAxVIq5UCHSSwCnIQFnoECBgQAQ&url=https%3A%2F%2Fwww.youtube.com%2Fchannel%2FUCU06XOgERkQV7xCsrNLTf4Q&usg=AOvVaw27Mn1xb-6tIE032vq367NQ&opi=89978449"><img src="images/youtube.png"></a>
+    </div>
   </body>
 </html>
