--- a/musica.html
+++ b/musica.html
@@ -6,6 +6,36 @@
 		<title> Título da sua página </title>
   </head>
   <body>
-    
+    <div>
+      <a href="index.html"><img src="images/logo.png"/></a>
+      <p><strong>Menu</strong></p>
+      <ul>
+        <li><a href="index.html">Página inicial</a></li>
+        <li><a href="filme.html">Filme</a></li>
+        <li><a href="livro.html">Livro</a></li>
+        <li><a href="musica.html">Música</a></li>
+      </ul>
+    </div>
+    <img src="images/musica.jpg">
+    <h1>Avisa que é o funk</h1>
+    <p>O álbum <em>Avisa Que É o Funk</em> do MC Hariel reflete uma rica tapeçaria de influências, combinando a evolução do funk carioca com referências ao funk dos anos 90 e elementos do rap e hip-hop. Essa mistura é um reflexo da transformação do funk em um fenômeno global, enquanto o MC Hariel também se inspira na cultura pop e nas sonoridades internacionais, adaptando essas influências ao seu estilo único. As letras do álbum, que frequentemente abordam a vida nas comunidades e desafios urbanos, destacam a autenticidade e a conexão com a realidade vivida pelos jovens da periferia, moldando uma obra que é ao mesmo tempo moderna e enraizada na experiência local.
+    </p>
+    <h1>Faixas</h1>
+    <ol>
+      <li>Avisa que é o funk</li>
+      <li>Maçã verde</li>
+      <li>Torcicolo</li>
+      <li>Trovão Azul</li>
+      <li>Favela pede Paz</li>
+      <li>É o poder</li>
+    </ol>
+    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj7j5eJ2L2IAxWPqJUCHVFABikQFnoECA8QAQ&url=https%3A%2F%2Fopen.spotify.com%2Fintl-pt%2Falbum%2F2jsCve1xB2Gi5fag004Wsh&usg=AOvVaw1wlM43E-HUazgDy3qDx433&opi=89978449"><img src="images/spotify.png"/></a>
+    <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwif_umd2L2IAxUjs5UCHdNnIyEQFnoECBYQAQ&url=https%3A%2F%2Fwww.deezer.com%2Fbr%2Falbum%2F177084422&usg=AOvVaw0TxtpjGTBzeMJRU3qcalOQ&opi=89978449"><img src="images/deezer.png"/></a>
+    <div>
+      <p>mchariel@gmail.com</p>
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiRre3q2r2IAxVEKrkGHXqbFakQFnoECBsQAQ&url=https%3A%2F%2Fwww.instagram.com%2Fmchariel%2F%3Fhl%3Den&usg=AOvVaw2TjdDOuNY_qW-5NAfLMnQ_&opi=89978449"><img src="images/instagram.png"></a>
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiz3Jjw2r2IAxWDF7kGHXyWGWoQFnoECBoQAQ&url=https%3A%2F%2Fwww.facebook.com%2Fharieloriginal%2F%3Flocale%3Dpt_BR&usg=AOvVaw1k4ZXe1y77SyipYq9126sE&opi=89978449"><img src="images/facebook.png"></a>
+      <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiFp4eL272IAxVIq5UCHSSwCnIQFnoECBgQAQ&url=https%3A%2F%2Fwww.youtube.com%2Fchannel%2FUCU06XOgERkQV7xCsrNLTf4Q&usg=AOvVaw27Mn1xb-6tIE032vq367NQ&opi=89978449"><img src="images/youtube.png"></a>
+    </div>
   </body>
 </html>
